# ai-data-preprocessing-queue

./: .flake8  .gitignore  .mypy.ini  README.md  number_interpretation_testdata.csv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  testdata.csv  tests.bat  tests.py  token_replacement_testdata.csv
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: 01-ci.yml  02-publish.yml  ci.yml
ai_data_preprocessing_queue/: Pipeline.py  StepProcessor.py  __init__.py
ai_data_preprocessing_queue/Steps/: __init__.py  language_detect.py  number_interpretation.py  ocr.py  regex_replacement.py  remove_numbers.py  remove_punctuation.py  remove_signature.py  snowball_stemmer.py  spellcheck.py  text_only.py  to_lower.py  token_replacement.py
ai_data_preprocessing_queue/Steps/number_interpretation_preprocessor/: __init__.py  base_replacer.py  date_replacer.py  german_phonenumber_replacer.py  iban_replacer.py  postcode_replacer.py  short_date_replacer.py
ai_data_preprocessing_queue/data/: number_interpretation.csv
ai_data_preprocessing_queue/services/: image_file_services.py
tests/: number_interpretation_testdata.csv  regex_replacement_testdata.csv  test_pipeline.py  test_remove_signature.py  tests.bat  tests.py
tests/test_data/: test_180.tiff
