[tool.poetry]
name = "ai-data-preprocessing-queue"
version = "0.1.0"
description = ""
authors = ["the-holsti <96723151+the-holsti@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.1.5"
nltk = "~=3.5"
langdetect = "^1.0.9"
pytesseract = "^0.3.9"
pdfplumber = "^0.7.1"
opencv-python = "4.5.5.64"
Pillow = "^9.2.0"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
