[tool.poetry]
name = "ai-data-preprocessing-queue"
version = "1.7.0"
description = "A collection of different text processing steps that can be enabled or disabled dynamically."
authors = ["KI-Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langdetect = "*"
nltk = "*"
numpy = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
build = "*"
coverage-lcov = "*"
flake8-bandit = "*"
flake8-pydocstyle = "*"
mypy = "*"
parameterized = "*"
pytest = "*"
pytest-cov = "*"
types-mock = "*"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
