[tool.poetry]
name = "ai-data-preprocessing-queue"
version = "1.7.1"
description = "A collection of different text processing steps that can be enabled or disabled dynamically."
authors = ["KI-Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langdetect = "*"
nltk = "*"
numpy = "*"
pandas = "*"

[tool.poetry.group.dev.dependencies]
build = "*"
coverage-lcov = "*"
mypy = "*"
parameterized = "*"
pytest = "*"
pytest-cov = "*"
types-mock = "*"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".env",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.pylint]
max-nested-blocks = 6
max-args = 8
max-positional-args = 8

[tool.ruff.lint]
preview = true
select = [
    "ASYNC",  # Async: https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B",      # Flake8 Bugbear: https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C901",   # complex-structure
    "D",      # Docstyle: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "DOC",    # Pydoclint: https://docs.astral.sh/ruff/rules/#pydoclint-doc
    "E",      # Errors: https://docs.astral.sh/ruff/rules/#error-e
    "F",      # Flakes: https://docs.astral.sh/ruff/rules/#pyflakes-f
    "G",      # Logging format: https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I",      # Isort: https://docs.astral.sh/ruff/rules/#isort-i
    "ISC001", # single-line-implicit-string-concatenation
    "N",      # Naming: https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PL",     # Pylint: https://docs.astral.sh/ruff/rules/#pylint-pl
    "Q",      # Quotes: https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RET",    # Return: https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "SIM",    # Simplify: https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLF",    # Private member access: https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "UP",     # Upgrade: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W",      # Warnings: https://docs.astral.sh/ruff/rules/#warning-w
]
ignore = [
    "B017",   # Do not assert blind exception: `Exception`
    "D100",   # undocumented-public-module
    "D101",   # undocumented-public-class
    "D102",   # undocumented-public-method
    "D103",   # undocumented-public-function
    "D104",   # undocumented-public-package
    "D105",   # undocumented-magic-method
    "D106",   # undocumented-public-nested-class
    "D107",   # undocumented-public-init
    "D203",   # one blank line required before class docstring
    "D213",   # multi-line summary starts on second line
    "DOC201", # docstring-missing-returns
    "DOC501", #	docstring-missing-exception"
    "ISC001", # single-line-implicit-string-concatenation
    "N818",   # error-suffix-on-exception-name
    "N999",   # invalid-module-name
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D400",    # first-line-should-end-with-period
    "D415",    # first-line-should-end-with
    "PLC2701", # import-private-name
    "PLR2004", # magic-value-comparison
    "PLR6301", # static method
    "PLR0904", # too-many-public-methods
    "SLF001",  # private-member-access
    "N802",    # invalid-function-name
    "N818",    # invalid-class-name
    "N999",    # invalid-module-name
]